gitea/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitea
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gitea
  template:
    metadata:
      labels:
        app: gitea
    spec:
      containers:
      - name: gitea
        image: ghcr.io/pmh-only/gitea:latest
        volumeMounts:
        - name: gitea-data
          mountPath: "/data"
      volumes:
      - name: gitea-data
        persistentVolumeClaim:
          claimName: gitea-pvc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitea-runner
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gitea-runner
  template:
    metadata:
      labels:
        app: gitea-runner
    spec:
      containers:
      - name: gitea-runner
        image: ghcr.io/pmh-only/gitea-runner:latest
        command: ["sh", "-c", "sleep 10; /opt/act/run.sh"]
        volumeMounts:
        - name: docker-socket
          mountPath: /var/run
        - name: runner-data
          mountPath: "/data"
      - name: daemon
        image: ghcr.io/pmh-only/docker-dind:latest
        securityContext:
          privileged: true
        volumeMounts:
        - name: docker-socket
          mountPath: /var/run/
      volumes:
      - name: docker-socket
        emptyDir: {}
      - name: runner-data
        persistentVolumeClaim:
          claimName: gitea-runner-pvc
