gitea/service.yml
apiVersion: v1
kind: Service
metadata:
  name: gitea-service
spec:
  selector:
    app: gitea
  ports:
    - name: gitea-web
      protocol: TCP
      port: 3000
      targetPort: 3000
    - name: gitea-ssh
      protocol: TCP
      port: 22
      targetPort: 22
